syntax = "proto3";

package server.user;

message SyncEverythingRequest {
  string since_date = 1;

  int32 count = 2;
}

message SyncEverythingResponse {
  message Result {
    int32 account_id = 1;

    // If unset, successful.
    shared.ErrorType error_type = 2;
  }
  repeated Result results = 1;
}
